# SeedSearch

./: .gitignore  README.md  main.py  pyproject.toml
data/: README.md
docs/: design_docs.md  introduce_features.md  uv.md
src/script/: preprocess_kaken.py
src/seedsearch/: __init__.py  cli.py  display.py  loader.py  models.py  search.py
src/seedsearch/data/: __init__.py
