[project]
name = "seedsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KOU050223", email = "kouhei20050223@icloud.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
seedsearch = "seedsearch:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
