[project]
name = "seedsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KOU050223", email = "kouhei20050223@icloud.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "pandas>=2.3.3",
]

[project.scripts]
seedsearch = "seedsearch:main"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
